--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
   "homepage": "https://Simzikov@bitbucket.org/Simzikov/dummy.git",
   "devDependencies": {
     "browser-sync": "^2.18.2",
-    "del": "^4.1.0",
+    "del": "^5.1.0",
     "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^6.0.0",
+    "gulp-autoprefixer": "^7.0.1",
     "gulp-cache": "^1.0.1",
     "gulp-csscomb": "^3.0.8",
     "gulp-cssnano": "^2.1.2",
-    "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^5.0.3",
+    "gulp-if": "^3.0.0",
+    "gulp-imagemin": "^7.1.0",
     "gulp-postcss": "^8.0.0",
     "gulp-sass": "^4.0.1",
     "gulp-uglify": "^3.0.1",
@@ -34,5 +34,8 @@
     "postcss-flexbugs-fixes": "^4.1.0",
     "run-sequence": "^2.2.0",
     "stream-combiner2": "^1.1.1"
+  },
+  "dependencies": {
+    "node-uuid": "^1.4.6"
   }
 }
